@@ -20,7 +20,6 @@ sendSocketClients(text, sockets = "all", serverport = 8888)
 
 \author{Philippe Grosjean (\email{phgrosjean@sciviews.org})}
 
-\seealso{ \code{\link{closeSocketClients}}, \code{\link{processSocket}},
-  \code{\link{sendSocketServer}} }
+\seealso{ \code{\link{closeSocketClients}}, \code{\link{processSocket}} }
 
 \keyword{ IO }
